--- a/css/style.css
+++ b/css/style.css
@@ -8,24 +8,15 @@ a:hover { color: #f60; text-decoration: none; }
 body { background: #F7F7F7 }
 .yonghudenlgu{ height:34px; line-height:34px;}
 .bannerbox { width: 965px; margin: 0 auto 20px; overflow: hidden }
-.header { width: 100%; min-width: 1200px; position: relative; background: #fff; }
+.header { margin-bottom: 20px; width: 100%; min-width: 1200px; position: relative; background: #fff; }
 .headmain { width: 1000px; margin: 0 auto }
 .header dl { width: 1000px; margin: 0 auto; overflow: hidden }
 .header dl dt { text-align: left; padding: 10px 0 10px; width: 260px; float: left; }
 .header dl dd { padding-top: 10px; height: 44px; line-height: 44px; text-align: left; }
-.search{ padding:10px 0 0 150px;float:left;}
-.search input{ width:200px; height:30px; line-height:30px; border:1px solid #999; text-indent:10px; float:left}
-.search button{ width:100px; height:32px; background:#900; color:#fff; text-align:center; line-height:32px; float:left}
-/*.header dl dd a { display: block; float: left; font-size: 18px; color: #05a; width: 116px; display: block; text-align: center; }
+.header dl dd a { display: block; float: left; font-size: 18px; color: #05a; width: 116px; display: block; text-align: center; }
 .header dl dd a.cur, .header dl dd a:hover { color: #05a }
-*/.header h3 { height: 50px; line-height: 50px; padding-top: 20px; font-size: 24px; color: #fff; text-align: center }
-.search{ padding:10px 0 0 150px;float:left;}
-.search input{ width:200px; height:30px; line-height:30px; border:1px solid #999; text-indent:10px; float:left}
-.search button{ width:100px; height:32px; background:#900; color:#fff; text-align:center; line-height:32px; float:left}
+.header h3 { height: 50px; line-height: 50px; padding-top: 20px; font-size: 24px; color: #fff; text-align: center }
 .header h3 span { color: #FF0; font-size: 30px; margin: 0 5px; }
-.navbox{ width:100%; background:#fff; margin-bottom: 20px;}
-.nav{ width:965px; margin:0 auto; height:50px; line-height:50px;}
-.nav a{ margin:0 20px; font-weight:bold}
 .main { width: 965px; margin: 0 auto }
 .chuxing { width: 685px; margin: 0 auto; text-align: center; font-weight: 500; height: 315px; position: relative }
 .chuxing h2 { font-size: 38px; letter-spacing: 3px; color: #e15151; text-align: center; height: 52px; line-height: 52px; font-weight: 500; padding-top: 75px; }
@@ -119,9 +110,9 @@ body { background: #F7F7F7 }
 .newskecheng ul li h3 a { color: #000 }
 .newskecheng ul li h3 a:hover { color: #f00 }
 .newskecheng ul li img { width: 100%; height: 134px; }
-.jdrgtitle { background: #fff; margin-bottom: 15px; height: 380px; padding: 20px; }
+.jdrgtitle { background: #fff; margin-bottom: 15px; height: 300px; padding: 20px; }
 .jdrgtitle h3 { font-size: 30px; padding: 0 0 20px 0; text-align: center; }
-.jdrgtitle img { float: left; width: 490px; height: 380px; margin-right: 25px; }
+.jdrgtitle img { float: left; width: 490px; height: 300px; margin-right: 25px; }
 .jdrgtitle p { line-height: 36px; }
 .jdrgtitle p strong{ font-weight:bold; color:#900}
 .jdrgtitle .spjj { background: #f9f9f9; padding: 10px 15px; font-size: 14px; margin-left: 500px; line-height: 28px; margin-bottom: 15px; height: 52px; overflow: hidden }
@@ -202,10 +193,4 @@ body { background: #F7F7F7 }
 .hotgood ul li h3 a{ font-size:14px;}
 .hotgood ul li p{ height:44px; overflow:hidden}
 .hotgood ul li p span{ font-size:12px;}
-.myorder table  td{ line-height:30px;   }
-.btu{ background:#f60;text-align:center;  margin-top:20px; color:#fff; width:180px; height:40px; border:0px; cursor:pointer}
-.ddleft{ width:150px; float:left; height:150px; background:#fff;}
-.ddleft ul li{ height:40px; line-height:40px; }
-.ddleft ul li a { display:block; text-indent:20px;}
-.ddleft ul li a:hover,.ddleft ul li a.cur{ background:#f1f1f1}
-.ddright{ margin-left:160px;}
+.myorder table  td{ line-height:30px; padding:5px; }
